--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <div id="actualContent">
 <div id="main-content" class=" theme-sti page-99797intranet">
 <div id="tools" role="toolbar">&nbsp;</div>
+<title>Salman Faraji</title>
 <!--googleon: index-->
 <h4 id="content" class="content" role="main"><!-- cache:include src="http://biorob.epfl.ch/cms/site/biorob/research/humanoid/walkman?ctnid=527917&cacheKey=" --></h4>
 <h1 id="multi-modal-locomotion" style="text-align: left;">About Me</h1>
