--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     		<div class="row d-flex">
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about-n.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about-1.JPG);">
 	    				</div>
     				</div>
     			</div>
