--- a/index.html
+++ b/index.html
@@ -463,7 +463,9 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Publications</h2>
+						<h2 class="mb-4">Publications</h2>
+						<a href="https://scholar.google.ch/citations?user=9oDr2MEAAAAJ&hl=en"><img style="width: 10%; height: auto;" src="./images/scholar.png" alt="" /></a> &nbsp;
+						<a href="https://www.researchgate.net/profile/Salman_Faraji"><img style="width: 10%; height: auto;" src="./images/rg.png" alt="" /></a>
           </div>
 				</div>
 				<div class="infoscience_export">
