--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
 		            <h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">About Me</h2>
-		            <p>I'm apostdoctoral researcher at <a href="https://www.epfl.ch/en/home/">École Polytechnique Fédérale de Lausanne (EPFL)</a>, working on a broad range of topics in robotics and control, including optimization, planning and building agile robots. I'm currently in the Learning Algorithms and Systems Laboratory, working with <a href="http://lasa.epfl.ch/people/member.php?SCIPER=115671">Prof. Aude Billard</a>. I got my PhD from the same institute but in the BioRobotics Laboratory, advised by <a href="https://biorob.epfl.ch/people/people-ijspeert/">Prof. Auke Ijspeert</a>.</p>
+		            <p>I'm apostdoctoral researcher at <a href="https://www.epfl.ch/en/home/">École Polytechnique Fédérale de Lausanne (EPFL)</a>, working on a broad range of topics in robotics and control, including optimization, planning and building agile robots. I'm currently in the Learning Algorithms and Systems Laboratory, working with <a href="http://lasa.epfl.ch/people/member.php?SCIPER=115671">Prof. Aude Billard</a>. I got my PhD from the same institute but in the BioRobotics Laboratory, advised by <a href="https://biorob.epfl.ch/people/people-ijspeert/">Prof. Auke Ijspeert</a>. Please find more information in my <a href="./files/CV.pdf">CV</a>. </p>
 		          </div>
 		        </div>
 		        <div class="row">
