--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	      <div class="slider-item ">
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third order-md-last img" style="background-image:url(images/bg_1.jpg);">
+	          	<div class="one-third order-md-last img" style="background-image:url(images/bg_1.JPG);">
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<!--a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
@@ -66,7 +66,7 @@
 	      <div class="slider-item">
 	        <div class="container">
 	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third order-md-last img" style="background-image:url(images/bg_2.png);">
+	          	<div class="one-third order-md-last img" style="background-image:url(images/bg_2.JPG);">
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<!--a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
@@ -218,7 +218,7 @@
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<div class="services-1">
 							<h2>Robot Control</h2>
-							<img src="images/about-n.png" alt="Coman" style="width:100%;height:auto;">
+							<img src="images/about-n.JPG" alt="Coman" style="width:100%;height:auto;">
 							<div class="desc">
 								<p></p>
 								<h4>Balance and Locomotion</h4>
@@ -230,7 +230,7 @@
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<div class="services-1">
 							<h2>Hardware Design</h2>
-							<img src="images/actuator.png" alt="Coman" style="width:100%;height:auto;">
+							<img src="images/actuator.JPG" alt="Coman" style="width:100%;height:auto;">
 							<div class="desc">
 								<p></p>
 								<h4>Robotic Actuators</h4>
@@ -505,10 +505,6 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h2 class="mb-4">Contact Me</h2>
             <p><h4>salman [dot] faraji [at] gmail [dot] com</h4></p>
-          </div>
-        </div>
-          <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(images/about.jpg);"></div>
           </div>
         </div>
       </div>
