--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     			<div class="col-md-6 col-lg-7 pl-lg-5 py-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		            <h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">About Me</h2>
+								<h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">About Me <a href="https://www.linkedin.com/in/salman-faraji-9b841964/"><img style="width: 5%; height: auto;" src="./images/linkedin.png" alt="" /></a></h2> 
 		            <p>I'm apostdoctoral researcher at <a href="https://www.epfl.ch/en/home/">École Polytechnique Fédérale de Lausanne (EPFL)</a>, working on a broad range of topics in robotics and control, including optimization, planning and building agile robots. I'm currently in the Learning Algorithms and Systems Laboratory, working with <a href="http://lasa.epfl.ch/people/member.php?SCIPER=115671">Prof. Aude Billard</a>. I got my PhD from the same institute but in the BioRobotics Laboratory, advised by <a href="https://biorob.epfl.ch/people/people-ijspeert/">Prof. Auke Ijspeert</a>. Please find more information in my <a href="./files/CV.pdf">CV</a>. </p>
 		          </div>
 		        </div>
@@ -504,7 +504,8 @@
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h2 class="mb-4">Contact Me</h2>
-            <p><h4>salman [dot] faraji [at] gmail [dot] com</h4></p>
+						<p><h4>salman [dot] faraji [at] gmail [dot] com</h4></p>
+						<a href="https://www.linkedin.com/in/salman-faraji-9b841964/"><img style="width: 10%; height: auto;" src="./images/linkedin.png" alt="" /></a>
           </div>
         </div>
       </div>
