--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<div class="services-1">
 							<h2>Hardware Design</h2>
-							<img src="images/actuator.JPG" alt="Coman" style="width:100%;height:auto;">
+							<img src="images/prusa.JPG" alt="Coman" style="width:100%;height:auto;">
 							<div class="desc">
 								<p></p>
 								<h4>Robotic Actuators</h4>
@@ -276,6 +276,19 @@
             <h2 class="mb-4">My Projects</h2>
             <p>A brief overview of what I've done in the past</p>
           </div>
+				</div>
+
+				<div class="row" style="background-color: rgb(230, 230, 255);">
+					<div class="col-md-6">
+						<h3 id="actuator-design"> Actuator Design </h3>
+						<p>We want lightweight and inexpensive actuators that deliver huge amounts of power and torque, yet being back-drivable and safe to operate. I've built one! My actuator uses large-diameter fpv motors, a strong bearing, planetary gears, active cooling and a high-current controller. I'm currently refining the desing, making it less expensive and more powerful. Don't hesitate to contact me if you're interested.</p>
+					</div>
+					<div class="col-md-6">
+						<h3>&nbsp;</h3><center>
+						<img style="width: 38.5%; height: auto;" src="./images/blackgear.JPG" alt="" />
+						<img style="width: 45%; height: auto;" src="./images/actuator.JPG" alt="" />
+						<h5>&nbsp;</h5></center>
+					</div>
 				</div>
 				
 				<div class="row" style="background-color: rgb(230, 230, 255);">
