--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    					</a-->
 		          	<div class="text">
 			            <h1 class="mb-4 mt-3">I'm <span>Salman Faraji</span></h1>
-			            <h2 class="mb-4">A thoughtfull roboticist!</h2>
+			            <h2 class="mb-4">An innovative roboticist!</h2>
 		            </div>
 		          </div>
 	        	</div>
@@ -121,7 +121,7 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text p-4 pr-5 bg-primary">
               	<p class="mb-0">
-	                <span class="number" data-number="9">0</span>
+	                <span class="number" data-number="13">0</span>
 	                <span>Finished Projects</span>
                 </p>
               </div>
