--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 	    						<span class="ion-ios-play play"></span>
 	    					</a-->
 		          	<div class="text">
-			            <h1 class="mb-4 mt-3">I do <span>Research</span> and <span>Problem Solving<span></h1>
+									<h1 class="mb-4 mt-3">I do <span>Research</span></h1>
+									<h2 class="mb-4">And problem solving</h2>
 		            </div>
 		          </div>
 	        	</div>
