--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<div class="services-1">
 							<h2>Bio-Mechanics</h2>
-							<img src="images/treadmill.JPG" alt="Coman" style="width:100%;height:auto;">
+							<img src="images/grail.JPG" alt="Coman" style="width:100%;height:auto;">
 							<div class="desc">
 								<p></p>
 								<h4>Gait Analysis</h4>
