moved walking gui to files

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 								<div class="center" style="text-align: center;"><strong>Developers (v2):&nbsp;</strong></div>
 								</td>
 								<td>
-								<div class="center" style="text-align: center;"><strong><a href="https://biorob.epfl.ch/files/content/sites/biorob/files/public/Walking3LP/Walking3LP_V2_test.zip">MATLAB&nbsp;codes</a>&nbsp;</strong></div>
+								<div class="center" style="text-align: center;"><strong><a href="./files/Walking3LP.zip">MATLAB&nbsp;codes</a>&nbsp;</strong></div>
 								</td>
 								<td>
 								<div class="center" style="text-align: center;"><a href="http://github.com/salmanfaraji/Walking3LP.git"><strong>GitHub&nbsp;Project</strong></a></div>
